<resources>
    <string name="app_name">My Application</string>

    <!-- Namitha -->
    <string name="hint_name">Enter your Name</string>
    <string name="hint_contact">Enter the Number</string>
    <string name="hint_common_word">Enter Common Words</string>
    <string name="hint_sms">Enter the SMS</string>
    <string name="txt_messages">View Messages</string>

    <string name="btn_cancel">Cancel</string>
    <string name="btn_send">Send</string>
    <string name="btn_ok">OK</string>
    <string name="btn_delete">DELETE</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_add_contacts">Add Contacts</string>
    <string name="btn_display">Display</string>
    <string name="btn_start">Start Dialog</string>
    <string name="btn_stop">Stop Dialog</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="hint_locaiton">Enter Location</string>
    <string name="hint_url">Please enter the details </string>
    <string name="hint_time">Enter Time</string>
    <string name="btn_check">Check</string>
    <string name="btn_show_contacts">View All Contacts</string>
    <string name="txt_marital_status">Married</string>
    <string name="btn_pick_time">Pick Time</string>



    <!-- Music Application -->
    <string name="app_version_number">1.0</string>
    <string name="menu_settings">Settings</string>
    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>

    <!--Face book Related-->
    <string name="facebook_app_id">1994766510794696</string>
    <string name="fb_login_protocol_scheme">fb1994766510794696</string>
    <string name="app_secret">b4981890f2d76dfe94ef2caca62b5967</string>


    <!--firebase Related-->
    <string name="firebase_app_id">1:259700152598:android:9b537403cc3f9ff9</string>
    <string name="firebase_app_oauth_id">259700152598-fn5vh2tsr7bg94li3u5i62h5ej673a6h.apps.googleusercontent.com</string>
    <string name="firebase_web_oauth_id">259700152598-g88lokaaps2hbnscgubj8gth2c5p6f3k.apps.googleusercontent.com</string>
    <string name="server_client_id">259700152598-g88lokaaps2hbnscgubj8gth2c5p6f3k.apps.googleusercontent.com</string>

    <string name="firebase_app_project_id">firstapplication-e44b3</string>
    <string name="firebase_app_web_api_key">AIzaSyADNzoFAd4AM6k2QIqGzPmsAHOrtZY_Qr4</string>

    <!-- twitter related -->
    <string name="com.twitter.sdk.android.CONSUMER_KEY">1ctNHV4NlEjORH8YXsephtFOs</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">	31inMt4IiHMyfhIxw0GUCHVdomStpEEG5Qp0XUbnQ4ZWFFzFvI</string>
</resources>
