<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_view_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_description"
            android:hint="@string/hint_common_word"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_edit"
            android:layout_below="@id/tv_description"
            android:layout_alignParentRight="true"
            android:text="@string/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_delete"
            android:layout_below="@id/btn_edit"
            android:text="@string/btn_delete"
            android:layout_alignStart="@id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
      android:id="@+id/rl_edit_container"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_ok"

            android:layout_alignParentRight="true"
            android:text="@string/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_common_word"
            android:layout_toLeftOf="@id/btn_ok"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_below="@id/btn_ok"
            android:layout_alignParentRight="true"
            android:text="@string/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

     </RelativeLayout>



</LinearLayout>