<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    >

    <Button
        android:id="@+id/btn_send"
        android:text="@string/btn_send"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_sms"
        android:hint="@string/hint_sms"
        android:layout_above="@id/btn_send"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/et_mobile_number"
        android:hint="@string/hint_contact"
        android:layout_above="@id/et_sms"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />





    <TextView
        android:id="@+id/tv_sms_status"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textSize="20dp"
        android:text="SMS STATUS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/tv_delivery_status"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textSize="20dp"
        android:text="SMS STATUS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</RelativeLayout>